[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air_traffic_passenger_statistics"
version = "0.1.0"
authors = [
    {name = "Nixaaaaa", email = "your.email@example.com"},
]
description = "End-to-end data analysis of air traffic passenger statistics with wrangling, cleaning, analysis, and visualization"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["air-traffic", "passenger-statistics", "data-analysis", "visualization", "aviation"]
license = {text = "MIT"}

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "jupyter>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Nixaaaaa/Air-Traffic-Passenger-Statistics"
"Source" = "https://github.com/Nixaaaaa/Air-Traffic-Passenger-Statistics"
"Bug Tracker" = "https://github.com/Nixaaaaa/Air-Traffic-Passenger-Statistics/issues"